--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -28,3 +28,12 @@ td > img {
 	display: flex;
 	flex: 1 1 auto;
 }
+
+#title-bar #title-bar-btns {
+	right: 0px !important;
+}
+
+#title-bar #title-bar-btns i {
+	font-size: 20px;
+	padding: 0 10px;
+}
